# stock-web

./: .gitignore  .nslab_trigger_20180619_20260714T1016Z  NSLAB_TRANSPORT_LINKS_20260714T193500.md  README.md  conftest.py
atlas/: README.md  manifest.json  schema.json  source_manifest.json
diagnostics/: atlas_build_report.md  atlas_size_report.md  atlas_validation_report.md  chatgpt_bundle.json  chatgpt_bundle.txt  probe_report.json  probe_report.txt  research_daily_build_report.json  research_daily_build_report.md  research_daily_size_report.json  research_daily_validation_report.json  research_daily_validation_report.md
docs/: goal.md  goal2.md  goal3.md
marcap-price-gateway/: .env.example  Dockerfile  README.md  pyproject.toml
marcap-price-gateway/app/: __init__.py  backtest.py  main.py  marcap_store.py  schemas.py  settings.py
marcap-price-gateway/app/templates/: event_window.html  index.html  price_path.html  trigger_backtest.html
marcap-price-gateway/public/: chatgpt_bundle.json  probe_report.json  sample-005930.txt  sample-trigger-005930.txt  selftest.txt
marcap-price-gateway/scripts/: bootstrap_marcap.py  build_duckdb_cache.py  probe_chatgpt_routes.py  refresh_marcap.py
marcap-price-gateway/tests/: conftest.py  test_backtest_math.py  test_chatgpt_diagnostics.py  test_health.py  test_routes.py
public/: chatgpt_bundle.json  chatgpt_bundle.txt  probe_report.txt  sample-005930.txt  sample-trigger-005930.txt
scripts/: atlas_utils.py  bootstrap_marcap.py  build_price_atlas.py  build_research_daily.py  build_research_pack.py  probe_price_atlas.py  (+3 more)
(+163721 files in other folders)
